--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><!--
+<html><!-- 620077636
 original lab idea and code by Kevin Wallace and Jeff Prouty; revised by Brian Le, Victoria Kirst, and Marty Stepp
 http://www.webstepbook.com/
 You should download this file for your lab, but you should not edit its contents.
